samples/_failures_safe/1761613617_373570_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ab013d09.c: In function ‘transform_bounding_box’:
./samples/SAFE/__tmp_ab013d09.c:123:9: error: expected expression at end of input
  123 |         if (transformed.y > result.max.y)
      |         ^~
./samples/SAFE/__tmp_ab013d09.c:123:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ab013d09.c:123:9: error: expected declaration or statement at end of input
